<resources>
    <string name="app_name">project_63</string>
    <string name="pisces">CUNG SONG NGƯ (19/2-20/3)</string>
    <string name="detail_pisces">Cung Song Ngư (♓) bao gồm những người sinh từ 19/2 đến 20/3 hàng năm, là cung chiêm tinh thứ mười hai trong Hoàng Đạo, có nguồn gốc từ chòm sao Song Ngư. Biểu tượng của cung Song Ngư là 2 chú cá bơi ngược chiều, kết nối với nhau bằng một sợi dây xích bạc. Những người thuộc cung Song Ngư thường lãng mạn, thích một mình và luôn tạo được cảm giác dễ chịu cho những người xung quanh.
    Vui vẻ, tràn đầy sự lạc quan, yêu đời
Những người cung Song Ngư khá dễ tính và thích ứng nhanh với môi trường, có thể giao tiếp được với rất nhiều mẫu người khác nhau. Họ thông minh và tốt bụng, biết cách nhún nhường trong những trường hợp cần thiết và cũng biết cảm thông cho những hoàn cảnh khó hơn mình. Người cung này thường mang lại không khí dễ chịu cho những người xung quanh.

Lãng mạn, mơ mộng, thích ở một mình
Song Ngư không hứng thú với tiền bạc, địa vị, danh vọng. Họ thích tự xây nên thế giới của riêng mình và thỏa sức mơ mộng, vẫy vùng trong đó. Những người cung Song Ngư hay thích nghe nhạc một mình, thích trang trí phòng riêng theo kiểu cách riêng.Sức tưởng tượng phong phú đôi khi khiến Song Ngư đắm chìm trong thế giới ảo mộng, không một ai có thể ngăn được. Để rồi có những lần Song Ngư rơi vào tình trạng buồn bã, tuyệt vọng khi phải đối mặt với thực tại khó khăn.

Nhanh nhẹn, nhạy cảm, có tài tiên đoán
Những người thuộc cung này có trực giác rất chính xác, nhạy bén, bởi vậy họ làm mọi người xung quanh kinh ngạc trước tài tiên đoán của mình. Song Ngư thường dùng trực giác để quyết định một vấn đề. Có những quyết định chính xác đến khó tin, nhưng việc thiếu tsuy nghĩ, tính toán dựa theo lý trí logic khiến nhiều lần Song Ngư quyết định sai lầm và gây thất vọng cho người khác.

Có phần khó hiểu và mâu thuẫn
Song Ngư chân thành, cởi mở, biết lắng nghe và có tấm lòng nhân hậu, luôn giúp đỡ những người bất hạnh, nghèo khó. Tuy nhiên, Song Ngư cũng rất dễ bị tổn thương, tự ái bởi sự phản bội và những góp ý gắt gao. Khi đứng trước một vấn đề nào đó, họ có nhiều suy nghĩ, ý tưởng và đắn đo không biết nên chọn con đường nào. Nhưng khi quyết định, Song Ngư lại rất cảm tính.</string>
    <string name="aries">CUNG BẠCH DƯƠNG (21/3-19/4)</string>
    <string name="detail_aries">CUNG BẠCH DƯƠNG có tên khác là Dương Cưu (21/3-20/4): Đây là cung đầu tiên của nhóm lửa trong ngày sinh 12 cung hoàng đạo.

Bạch Dương vốn là người rất nhiết huyết và có tố chất người thủ lĩnh, thích thử thách, chính trực và nghĩa khí. Trong tình cảm rất nghiêm túc và thể diện lắm nghen. Biết cách che giấu cảm xúc khi bị tổn thương và tự "dày vò" bản thân. Nếu là đàn ông thì có nguy cơ bị hói nhé!!!

Bạch Dương sinh từ 21/3 - 31/3: Thích mơ mộng chẳng kém gì các cung Nước và là người chân thành nên dễ đắm chìm trong tình yêu, coi tình yêu như “sinh mạng” của mình.
Bạch Dương sinh từ 1/4 - 10/4: Họ thường sở hữu IQ khá cao, thích tìm hiểu nhiều lĩnh vực khác nhau và hoàn toàn có thể hoạt động độc lập. Họ cũng đặc biệt dễ cảm thông với suy nghĩ của người khác, dễ xót thương trước những điều không hay diễn ra quanh mình.
Bạch Dương sinh từ 11/4 - 19/4: Họ kiêu hãnh và tràn đầy sức sống, luôn theo đuổi những điều mới mẻ không mệt mỏi và yêu thương nồng nàn, mãnh liệt. Tuy nhiên, vì quá nhiều năng lượng nên đôi khi họ rơi vào tình trạng nóng nảy, vội vã dẫn đến hỏng việc.
Dự kiến những ngày Tết thì lại cơ hội làm ăn phát tài phát lộc và tốt hơn thì hợp tác với người khác để tăng thêm "doanh thu". Vì vậy, Tết năm 2023 sắp đến, bạn hãy thử vận may của mình nhé. Chúc bạn luôn gặp nhiều may mắn và thành công.

Về món ăn: Cung Bạch Dương thường có hệ thống miễn dịch tốt nhưng dễ bị mụn trứng cá và ợ chua. Để ngăn ngừa nó, bạn có thể bao gồm các loại rau lá xanh, dưa chuột, ô liu, táo, củ cải, chanh, hạnh nhân, bắp cải và đậu lăng trong chế độ ăn uống của mình.</string>
    <string name="detail_taurus">Ngày nay, theo Dương lịch, cung Kim Ngưu đại diện cho những người sinh trong khoảng thời gian từ 21/4 - 20/5 hằng năm. Cung Kim Ngưu nhận được sự che chở của nữ thần Aphrodite - con gái của thần Zeus cùng với tiên nữ Dione, một vị thần không có quá nhiều vũ khí trong tay ngoại trừ sắc đẹp tuyệt trần, sự quyến rũ và mê hoặc không thể cưỡng lại được cùng với khả năng ban phát tình yêu cho nhân loại.

Sao chiếu mạng: Sao Kim (biểu trưng cho sự quyến rũ, tình cảm nồng nàn, sự sở hữu, văn hóa, sự ngọt ngào, tính nghệ thuật và ca hát).
Tính chất chung: Tượng trưng cho những người có tổ chức.
Biểu tượng: Bò đực, hải cẩu.
Ngày trong tuần: Thứ Sáu.
Màu sắc: Hồng, xanh lục.
Đá may mắn: Ngọc lục bảo, ngọc bích, ngọc lam.
Nguyên tố: Đất.
Con số may mắn: 2 và 8.
Hẹn hò với: Xử Nữ, Ma Kết.
Làm bạn với: Sư Tử, Bảo Bình.
Cung không hợp: Bọ Cạp.
Hệ thống 12 cung Hoàng Đạo được dùng trong chiêm tinh học cũng như trong việc lý giải các nhóm tính cách, hành vi của con người, bên cạnh đó cũng dự đoán các xu hướng và hành động của tương lai. Chính vì vậy, khá nhiều người trên thế giới rất tin vào việc đoán tính cách thông qua các cung Hoàng Đạo cũng như các dự báo tương lai của chúng.</string>
    <string name="taurus">CUNG KIM NGƯU (20/4-20/5)</string>
    <string name="gemini">CUNG SONG TỬ (21/5-21/6</string>
    <string name="detail_gemini">Là cung thứ ba trong 12 Cung Hoàng Đạo, Song Tử là một trong 4 cung biến đổi (cùng với Nhân Mã, Xử Nữ, Song Ngư) và là một trong 3 cung thuộc nguyên tố Khí (cùng với Thiên Bình và Bảo Bình). Cùng INVERT tìm hiểu bí mật của Cung Xử Nữ như tính cách, ngày sinh, con số may mắn. Liệu biểu tượng cung hoàng đạo nào hợp nhau và kỵ với Cung Song Tử nhé.Theo khoa học thì chòm sao Song Tử này có nhiều đặc điểm khá thú vị. Chòm sao Song Tử là địa điểm may mắn trên thiên cầu cho việc phát hiện các hành tinh mới. William Herschel tìm ra Sao Thiên Vương vào năm 1781 gần sao Eta Geminorum (thuộc chòm sao này). Cũng trong chòm sao này Clyde William Tombaugh tìm ra Sao Diêm Vương vào năm 1930 gần sao Đelta Geminorum nằm trong chòm sao Song Tử.

Tuy mang ký hiệu Alpha (α) Geminorum, sao Castor là sao sáng thứ hai trong chòm sao Song Tử, sau sao Pollux, ký hiệu Beta (β) Geminorum. Castor là sao đôi, có thể quan sát các sao thành phần bằng kính viễn vọng cỡ nhỏ, các sao thành phần cách nhau khoảng ba giây cung. Sao Eta (η) Geminorum là sao biến đổi có thể nhìn bằng mắt thường, với cấp sao biểu kiến từ 3,2 đến 3,9 m và chu kỳ hơn tám tháng.Gần ranh giới với chòm sao Kim Ngưu có thể tìm thấy cụm sao mở M35 bằng ống nhòm, bên cạnh nó (khoảng cách biểu kiến) là cụm sao mở NGC 2158, nhìn qua kính viễn vọng nhỏ chỉ là một vết sáng mờ. Thực tế NGC 2158 cách Trái Đất 16000 ly, xa hơn M35 năm lần. Tuy chòm sao chỉ đứng thứ 30 về diện tích, Song Tử có tới 70 sao có thể quan sát bằng mắt thường ứng (cấp sao biểu kiến nhỏ hơn 6m). Chòm sao Song Tử còn dễ nhận ra trên bầu trời đêm nhờ các chòm sao nổi bật nằm kề là Tiểu Khuyển và Lạp Hộ.Tính cách của Song Tử
CUNG SONG TỬ (21/5-21/6): Đây là cung thuộc nhóm khí, đại diện cho những bộ phận cơ thể như phổi, vai, cánh tay và bàn tay, rất khó để có thể kiểm soát Song Tử.

Song tử vốn là người thích quan tâm và dành thời gian cho gia đình bạn bè, năng động và vui vẻ nhưng đôi lúc hay lo lắng và tiêu cực, thường bị dị ứng phấn hoa, thường bị bệnh hô hấp; cảm lạnh và hay ho.

Về tình cảm của Song tử thì bị "chơi xấu" sau lưng, bị đặt chuyện không đúng khiến bạn bị oan. Tuy nhiên tình cảm hai người bền vững nhé!</string>
    <string name="cancer">CUNG CỰ GIẢI (22/6-22/7)</string>
    <string name="detail_cancer">Những người thuộc cung Cự Giải là những người sinh từ 22/6-22/7. Cự Giải thuộc cung thứ 4 trong vòng tròn hoàng đạo. Đây là cung thuộc nguyên tố nước (cùng với Bọ Cạp và Song Ngư) và thuộc nhóm đặc tính thống lĩnh (cùng với Bạch Dương, Bảo Bình và Ma Kết). Cự Giải có sao chiếu mệnh là Mặt Trăng – biểu tượng cho sự quyến rũ, khát vọng, sự trưởng thành và nhận thức.
    Biểu tượng cung Cự Giải: con cua cách điệu

Kí hiệu cung Cự Giải: ♋

Đây là kí hiệu cách điệu cho hai chiếc càng cua, một đặc điểm nhận diện nổi bật. Những người thuộc cung này có tính cách rất thất thường: lúc thì ân cần, dịu dàng, lúc lại trở nên kì lạ và khó hiểu. Hành động của họ cũng đôi khi có phần quá khích và rất phức tạp: buồn bã, đau khổ xen lẫn niềm vui và sự hạnh phúc.
    Cũng giống như những chú Cua có một vỏ bọc cứng, những người thuộc cung Cự Giải thường bao bọc bởi một vẻ ngoài khó ưa, lạnh lùng. Nhưng khi cởi bỏ lớp vỏ bên ngoài, bạn sẽ thấy một Cự Giải tinh nghịch đáng yêu như những đứa trẻ. Họ có một tâm hồn mong manh, nhạy cảm cùng với một đời sống tinh thần phong phú, bí ẩn như những cơn sóng ngầm ngoài biển.

Cự Giải có một trí nhớ tốt và họ thích tìm hiểu về lịch sử loài người. Những vật xưa cũ, những đồ kỉ niệm, những món đồ độc đáo, kì lạ đều được Cự Giải sưu tầm. Dù đối với người khác thì không có giá trị, nhưng đối với “những con Cua” này thì chúng quý hơn cả vàng. Bởi vậy họ luôn cất giữ những đồ vật được sưu tầm một cách dễ dàng.

Cự Giải luôn tỏ ra tự tin và lạc quan, dù thật tâm thì không như vậy. Dẫu là một ngày đầy sóng gió, khó khăn thì phong thái bên ngoài của họ cũng chưa bao giờ toát lên vẻ khổ sở, nao núng. Chính vì thế, ít ai có thể hiểu được những khó khăn mà Cự Giải đã phải trải qua.</string>
    <string name="leo">CUNG SƯ TỬ (23/7-22/8)</string>
    <string name="virgo">CUNG XỬ NỮ (23/8-22/9)</string>
    <string name="libra">CUNG BẢO BÌNH (23/9-22/10)</string>
    <string name="scorpio">CUNG THIÊN YẾT (23/10-22/11)</string>
    <string name="sagittarius">CUNG NHÂN MÃ (22/11-21/12)</string>
    <string name="cappricorn">CUNG MA KẾT (22/12-19/1)</string>
    <string name="aquarius">CUNG BẢO BÌNH (20/1 - 18/2)</string>
    <string name="detail_aquarius">CUNG BẢO BÌNH (20/1-18/2): Đây là cung thuộc nhóm Không Khí. Sao Thổ và sao Thiên Vương chiếu mệnh nên sống thật thà, chất phát, lòng vị tha.

Cung Bảo Bình là TOP những người thông minh và hiểu biết và sở hữu bộ óc sáng tạo tài ba của 12 cung hoàng đạo, cùng với tính cách tự tin và mạnh mẽ giúp họ phát huy được hết khả năng của bản thân.Mặt tốt: Bạn cực kỳ khôn ngoan và cũng là người tiên tiến, không bị tụt hậu hay cổ hủ. Mọi người thích nói chuyện với bạn cũng như ở xung quanh bạn vì họ thực sự cảm thấy thoải mái, vui vẻ.

Bạn thích thử thách và luôn sẵn sàng cho bản thân đương đầu với khó khăn mới. Bạn thích tự mình vượt qua giới hạn của bản thân để xem mình có thể đi được bao xa.

Mặt xấu: Bạn không dễ tiếp thu ý kiến của người khác vì bạn luôn tin vào khía cạnh hợp lý của mình thay vì sống theo cảm xúc. Cung hoàng đạo này khi bảo vệ quan điểm của bản thân sẽ có kiểu sống quá lý trí và lạnh lùng, không vì tình mà nể.

Bạn không đối phó tốt với áp lực, dễ bị áp lực đánh gục. Ví dụ như khi mới vào công ty mới mà có nhiều áp lực thì đêm về chòm sao này sẽ ngủ mớ, ám ảnh và nản lòng mỗi sáng mai thức dậy, không muốn đi làm. Bạn có thể tham khảo lời khuyên cho 12 chòm sao năm 2022 để thành công vang dội.</string>
</resources>